--- a/core/templates/core/risk.html
+++ b/core/templates/core/risk.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block context %}
+{% block content %}
 
     <!-- <h1>DREAD Risk Calculator</h1> -->
      <div class="row">
