--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,52 @@
         <!-- <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" type="text/css" /> -->
     </head>
     <body>
-        <div class="container">            
-            {% block context %} {% endblock %}
+        <div class="container-fluid">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="{% url 'risk:calculate_risk' %}">DREAD-C</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+              
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Risk Calculator
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="{% url 'risk:calculate_risk' %}">No Cost (Windows)</a>
+                                <a class="dropdown-item" href="{% url 'risk:calculate_risk' %}">No Cost (Mac-Book)</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#">With Cost (Windows)</a>
+                                <a class="dropdown-item" href="#">With Cost (Mac-Book)</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#">Compare Costs (Windows)</a>
+                                <a class="dropdown-item" href="#">Compare Costs (Mac-Book)</a>
+                            </div>
+                        </li>
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Rules
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="{% url 'risk:view_fuzzy_rules_without_cost' %}">No Cost</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="{% url 'risk:view_fuzzy_rules_with_cost' %}">With Cost</a>                                
+                            </div>
+                        </li>
+                    
+                  </ul>
+                  
+                </div>
+              </nav>
+
+            
+
+                
+              <div class="col-md-10"> {% block content %} {% endblock %} </div>
         </div>
 
         <script src="{% static 'js/jquery.min.js' %}" type="text/javascript"></script>
