--- a/core/templates/core/risk_with_cost_for_macbook.html
+++ b/core/templates/core/risk_with_cost_for_macbook.html
@@ -6,11 +6,11 @@
      <div class="row">
         <div class="col-md-12">
             <div class="alert alert-primary" role="alert">
-                <h1>DREAD-C Risk Calculator with Cost Variable</h1>
+                <h1>DREAD Risk Calculator without Cost Variable</h1>
             </div>
         </div>
 
-        <div class="col-md-12" style="border: solid 1px #e3e3e3; padding: 5%; border-radius: 1%;">
+        <div class="col-md-4" style="border: solid 1px #e3e3e3; padding: 1%; border-radius: 1%;">
             <form method="post" action="{% url 'risk:risk_with_cost_for_macbook' %}">
                 {% csrf_token %}
         
@@ -63,16 +63,65 @@
         
             </form>
         </div>
-     </div>
-    
 
-     {% if result %}
-     <div class="row" style="margin-top: 2%; padding: 5%; border: solid 1px #e3e3e3; border-radius: 1%;">
-        <div class="col-md-6">            
-            <h2>Calculated Risk Score: {{ result }}</h2>
-            <img src="data:image/png;base64,{{ graph }}" />            
-        </div>
-    </div>
-    {% endif %}
+     </div>
+     
+     <br>
+
+     <div class="row">
+            {% if result %}
+            <div class="row">
+                <div class="col-md-3" style="border-right: solid 1px #e3e3e3;">
+
+                    <h2>Input Factors</h2>
+                    <table class="table table-striped table-bordered table-hover">                    
+                        <tbody>
+                            <tr>
+                                <td> Cost </td>
+                                <td> {{input.cost}} </td>
+                            </tr>
+                            <tr>
+                                <td> Exploitability </td>
+                                <td> {{input.exploitability}} </td>
+                            </tr>
+                            <tr>
+                                <td> Affected Users </td>
+                                <td> {{input.affected_users}} </td>
+                            </tr>
+                            <tr>
+                                <td> Discoverability </td>
+                                <td> {{input.discoverability}} </td>
+                            </tr>
+                            <tr>
+                                <td> Reproducibility </td>
+                                <td> {{input.reproducibility}} </td>
+                            </tr>
+                            <tr>
+                                <td> Damage Potential </td>
+                                <td> {{input.damage_potential}} </td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                            </tr> 
+                            
+                            <tr>
+                                <td>Cost Score</td>
+                                <td> {{ input.result_cost_sim }} </td>
+                            </tr> 
+                            <tr>
+                                <td>Risk Score</td>
+                                <td> {{ input.result_risk_sim }} </td>
+                            </tr> 
+                        </tbody>
+                    </table>
+                </div>
+                <div class="col-md-9">
+                    <h2>Calculated Risk Score: {{ result }}</h2>
+                <img src="data:image/png;base64,{{ graph }}" /> 
+                </div>
+            </div>                
+            {% endif %}
+     </div>
 
   {% endblock %}
