Graph for windows with cost

--- a/core/templates/core/risk_without_cost_windows.html
+++ b/core/templates/core/risk_without_cost_windows.html
@@ -6,21 +6,15 @@
      <div class="row">
         <div class="col-md-12">
             <div class="alert alert-success" role="alert">
-                <h1>DREAD-C Risk Calculator with Cost Variable</h1>
+                <h1>DREAD-c Risk Calculator without Cost Variable</h1>
             </div>
         </div>
 
-        <div class="col-md-4" style="border: solid 1px #e3e3e3; padding: 1%; border-radius: 1%;">
-            <form method="post" action="{% url 'risk:risk_with_cost_for_macbook' %}">
+        <div class="col-md-5" style="border: solid 1px #e3e3e3; padding: 1%; border-radius: 1%;">
+            <form method="post" action="{% url 'risk:risk_without_cost_for_windows' %}">
                 {% csrf_token %}
         
                 <div class="row">
-                    <div class="col-md-12">                
-                        <div class="form-group">                
-                            <label for="exampleInputEmail1">Cost</label>
-                            <input type="number" class="form-control" name="cost" id="cost" aria-describedby="costHelp" placeholder="Cost">                                              
-                        </div>
-                    </div>
 
                     <div class="col-md-12">                
                         <div class="form-group">                
@@ -64,22 +58,15 @@
             </form>
         </div>
 
-     </div>
-     
-     <br>
-
-     <div class="row">
-            {% if result %}
+        <div class="col-md-1"></div>
+        {% if result %}
+        <div class="col-md-5">
             <div class="row">
-                <div class="col-md-3" style="border-right: solid 1px #e3e3e3;">
+                <div class="col-md-12">
 
                     <h2>Input Factors</h2>
                     <table class="table table-striped table-bordered table-hover">                    
                         <tbody>
-                            <tr>
-                                <td> Cost </td>
-                                <td> {{input.cost}} </td>
-                            </tr>
                             <tr>
                                 <td> Exploitability </td>
                                 <td> {{input.exploitability}} </td>
@@ -113,12 +100,37 @@
                                 <td>Risk Score</td>
                                 <td> {{ input.result_risk_sim }} </td>
                             </tr> 
+
+                            <tr>
+                                <td></td>
+                                <td></td>
+                            </tr> 
+                            
+                            <tr>
+                                <td>Total Score</td>
+                                <td> {{ result }} </td>
+                            </tr> 
                         </tbody>
                     </table>
                 </div>
-                <div class="col-md-9">
+            </div>
+        </div>
+        {% endif %}
+
+     </div>
+     
+     <br>
+
+     <div class="row">
+            {% if result %}
+            <div class="row">             
+                <div class="col-md-6" style="border-right: solid 1px #e3e3e3;">
                     <h2>Calculated Risk Score: {{ result }}</h2>
-                <img src="data:image/png;base64,{{ graph }}" /> 
+                    <img src="data:image/png;base64,{{ graph_1 }}" /> 
+                </div>
+                <div class="col-md-6">
+                    <h2>Calculated Risk Score: {{ result }}</h2>
+                    <img src="data:image/png;base64,{{ graph }}" /> 
                 </div>
             </div>                
             {% endif %}
