--- a/templates/base.html
+++ b/templates/base.html
@@ -30,9 +30,7 @@
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="{% url 'risk:risk_with_cost_for_windows' %}">With Cost (Windows)</a>
                                 <a class="dropdown-item" href="{% url 'risk:risk_with_cost_for_macbook' %}">With Cost (Mac-Book)</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Compare Costs (Windows)</a>
-                                <a class="dropdown-item" href="#">Compare Costs (Mac-Book)</a>
+                               
                             </div>
                         </li>
 
@@ -41,9 +39,11 @@
                                 Rules
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="{% url 'risk:view_fuzzy_rules_without_cost' %}">No Cost</a>
+                                <a class="dropdown-item" href="{% url 'risk:view_fuzzy_rules_with_cost' %}">With Cost</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="{% url 'risk:view_fuzzy_rules_with_cost' %}">With Cost</a>                                
+                                <a class="dropdown-item" href="{% url 'risk:view_fuzzy_rules_without_cost' %}">Without Cost</a>
+                                <div class="dropdown-divider"></div>                                
+                                <a class="dropdown-item" href="{% url 'risk:view_fuzzy_rules_for_cost_only' %}">Cost rules Only</a>                                
                             </div>
                         </li>
                     
