--- a/core/templates/core/rules_without_cost.html
+++ b/core/templates/core/rules_without_cost.html
@@ -5,8 +5,8 @@
     <!-- <h1>DREAD Risk Calculator</h1> -->
      <div class="row">
         <div class="col-md-12">
-            <div class="alert alert-primary" role="alert">
-                <h1>DREAD RULES</h1>
+            <div class="alert alert-success" role="alert">
+                <h1> DREAD RULES</h1> <small> Rules <b>without</b>  COST.</small> | <small> <em> <b>{{ number_of_rules }}</b> </em> Rules Generated  </small>
             </div>
         </div>
 
@@ -15,7 +15,6 @@
         </div>
 
         <div class="col-md-6" style="margin-bottom: 10px; margin-top: 10px;">
-            Number of Rules: - {{ number_of_rules }}
         </div>
 
         <div class="col-md-12">
