--- a/templates/base.html
+++ b/templates/base.html
@@ -41,9 +41,9 @@
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <!-- <a class="dropdown-item" href="{% url 'risk:view_fuzzy_rules_with_cost' %}">With Cost</a> 
                                 <div class="dropdown-divider"></div> -->
-                                <a class="dropdown-item" href="{% url 'risk:view_fuzzy_rules_without_cost' %}">DREAD RULES</a>
+                                <a class="dropdown-item" href="{% url 'risk:view_fuzzy_rules_without_cost' %}">DREAD Rules</a>
                                 <div class="dropdown-divider"></div>   
-                                <a class="dropdown-item" href="{% url 'risk:view_fuzzy_rules_without_cost' %}">DREAD RULES</a>
+                                <a class="dropdown-item" href="{% url 'risk:view_fuzzy_rules_for_dream_c' %}">DREAD-C Rues</a>
                                <!-- <a class="dropdown-item" href="{% url 'risk:view_fuzzy_rules_for_cost_only' %}">Cost rules Only</a> -->                               
                             </div>
                         </li>
