--- a/core/templates/core/risk_with_cost_windows.html
+++ b/core/templates/core/risk_with_cost_windows.html
@@ -109,6 +109,14 @@
                                 <td>DREAD-C Score</td>
                                 <td> {{ input.result_cost_sim }} </td>
                             </tr> 
+                             <tr>
+                                <td></td>
+                                <td></td>
+                            </tr> 
+                            <tr>
+                                <td>Decision</td>
+                                <td> {{decision}} </td>
+                            </tr> 
                             
                         </tbody>
                     </table>
