Initilizing form variables

--- a/core/templates/core/risk_without_cost_windows.html
+++ b/core/templates/core/risk_without_cost_windows.html
@@ -19,35 +19,35 @@
                     <div class="col-md-12">                
                         <div class="form-group">                
                             <label for="exampleInputEmail1">Exploitability</label>
-                            <input type="number" class="form-control" name="exploitability" id="exploitability" aria-describedby="exploitabilityHelp" placeholder="Exploitability">                                              
+                            <input type="number" value="0" class="form-control" name="exploitability" id="exploitability" aria-describedby="exploitabilityHelp" placeholder="Exploitability">                                              
                         </div>
                     </div>
 
                     <div class="col-md-12">                
                         <div class="form-group">                
                             <label for="exampleInputEmail1">Affected Users</label>
-                            <input type="number" class="form-control" name="affected_users" id="affected_users" aria-describedby="affected_usersHelp" placeholder="Affected Users">                            
+                            <input type="number" value="0" class="form-control" name="affected_users" id="affected_users" aria-describedby="affected_usersHelp" placeholder="Affected Users">                            
                         </div>
                     </div>
 
                     <div class="col-md-12">                
                         <div class="form-group">                
                             <label for="exampleInputEmail1">Discoverability</label>
-                            <input type="number" class="form-control" name="discoverability" id="discoverability" aria-describedby="discoverabilityHelp" placeholder="Discoverability">                            
+                            <input type="number" value="0" class="form-control" name="discoverability" id="discoverability" aria-describedby="discoverabilityHelp" placeholder="Discoverability">                            
                         </div>
                     </div>
 
                     <div class="col-md-12">                
                         <div class="form-group">                
                             <label for="exampleInputEmail1">Reproducibility</label>
-                            <input type="number" class="form-control" name="reproducibility" id="reproducibility" aria-describedby="reproducibilityHelp" placeholder="Reproducibility">                            
+                            <input type="number" value="0" class="form-control" name="reproducibility" id="reproducibility" aria-describedby="reproducibilityHelp" placeholder="Reproducibility">                            
                         </div>
                     </div>
 
                     <div class="col-md-12">                
                         <div class="form-group">                
                             <label for="exampleInputEmail1">Damage Potential</label>
-                            <input type="number" class="form-control" name="damage_potential" id="damage_potential" aria-describedby="damage_potentialHelp" placeholder="Damage Potential">                            
+                            <input type="number" value="0" class="form-control" name="damage_potential" id="damage_potential" aria-describedby="damage_potentialHelp" placeholder="Damage Potential">                            
                         </div>
                     </div>
 
