--- a/core/templates/core/risk_with_cost_windows.html
+++ b/core/templates/core/risk_with_cost_windows.html
@@ -6,7 +6,7 @@
      <div class="row">
         <div class="col-md-12">
             <div class="alert alert-success" role="alert">
-                <h1>DREAD-C Risk Calculator without Cost Variable</h1>
+                <h1>DREAD-C Risk Calculator with Cost Variable</h1>
             </div>
         </div>
 
