Review Risk levels and c.ode cleanup

--- a/core/templates/core/risk_without_cost_windows.html
+++ b/core/templates/core/risk_without_cost_windows.html
@@ -92,7 +92,7 @@
                                 <td></td>
                             </tr>                             
                             <tr>
-                                <td>DREAM Score</td>
+                                <td>DREAD Score</td>
                                 <td> {{ input.result_risk_sim }} </td>
                             </tr> 
                         </tbody>
