--- a/core/templates/core/risk_with_varying_cost_and_constant_dread_parameters.html
+++ b/core/templates/core/risk_with_varying_cost_and_constant_dread_parameters.html
@@ -43,8 +43,13 @@
                     </form>
                 </div>
 
-                <div class="col-md-12">                
-                    <h2>{{title}}</h2>                    
+                <div class="col-md-12">
+
+                    
+                    <h2>{{title}}</h2> 
+                    {% if dread and generate_nums %}
+                    <a href="{% url 'risk:risk_with_varying_cost_and_constant_dread_parameters_to_excel' %}" class="btn btn-success">Print Excel Report</a> <br>
+                    {% endif %}
                     <table class="table table-striped table-bordered table-hover">
                         <thead>
                             <tr>
